<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HelpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:paddingStart="35dp"
        android:paddingEnd="30dp"
        android:text="FAQ"
        android:textSize="20dp"
        android:background="@color/QuesbtnColor"
        android:gravity="center_vertical"
        android:textColor="@color/BlueText" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginTop="30dp"
        android:text="What is Psychological Test?"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/BlueText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ans_one"
        android:textSize="16dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/BlueText"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginTop="20dp"
        android:text="How can I test my mental health?"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/BlueText"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ans_two"
        android:textSize="16dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/BlueText"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginTop="30dp"
        android:text="How can I find Doctors?"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/BlueText"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ans_three"
        android:textSize="16dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/BlueText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:layout_marginTop="30dp"
                android:text="How can I contact with Doctors?"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/BlueText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ans_four"
                android:textSize="16dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/BlueText" />



        </LinearLayout>


    </ScrollView>

</LinearLayout>